--- a/fuel-station-backend/.env
+++ b/fuel-station-backend/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=kashinovi.M03
+DB_PASSWORD=1234
 DB_NAME=sit_project
 JWT_SECRET=1234
 NOTIFY_USER_ID=29542
