Add SMTP and Stream transport implementations for Nodemailer

--- a/fuel-station-backend/.env
+++ b/fuel-station-backend/.env
@@ -6,3 +6,7 @@ JWT_SECRET=1234
 
 NOTIFY_USER_ID=29542
 NOTIFY_API_KEY= "IxQ8IgkEZ7QSqwsK3VvM",
+
+EMAIL_USER=thujathaponnuthurai@gmail.com
+EMAIL_PASS=wghcxvvvujzpcvdv
+CLIENT_URL=http://localhost:5174  
